--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,7 +9,7 @@
 <body>
      
          <form action="/signup" method="post">
-            <label for="username">Name : </label>
+            <label for="username">Username : </label>
             <input type="text" name="username" id="">
             <label for="email">Email : </label>
             <input type="email" name="email" id="">
