--- a/views/getLocation.ejs
+++ b/views/getLocation.ejs
@@ -60,7 +60,7 @@
   </header><!-- End Header -->
 
   <div class="pagetitle" >
-    <h1 style="font-size: 41px;text-align : center;color: #fb6d00;">All Complaints</h1>
+    <h1 style="font-size: 41px;text-align : center;color: #fb6d00;">All Complaintssssss</h1>
     <nav>
      
     </nav>
