--- a/views/AuthoritySideDashboard.ejs
+++ b/views/AuthoritySideDashboard.ejs
@@ -44,7 +44,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
-      <a href="index.ejs" class="logo"><img src="assets/img/logo-sarasmarg-2.png" alt=""></a>
+      <a href="/" class="logo"><img src="assets/img/logo-sarasmarg-2.png" alt=""></a>
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto " href="/">Home</a></li>
