--- a/views/AuthoritySideLogin.ejs
+++ b/views/AuthoritySideLogin.ejs
@@ -44,14 +44,14 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
-      <a href="index.ejs" class="logo"><img src="assets/img/logo-sarasmarg-2.png" alt=""></a>
+      <a href="/" class="logo"><img src="assets/img/logo-sarasmarg-2.png" alt=""></a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="index.ejs">Home</a></li>
-          <li><a class="nav-link scrollto" href="index.ejs">About</a></li>
-          <li><a class="nav-link scrollto" href="index.ejs">Services</a></li>
-          <li><a class="nav-link scrollto" href="index.ejs">Contact</a></li>
+          <li><a class="nav-link scrollto active" href="/">Home</a></li>
+          <li><a class="nav-link scrollto" href="/#counts">About</a></li>
+          <li><a class="nav-link scrollto" href="/#portfolio">Services</a></li>
+          <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
