--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,12 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
+  <style>
+    .added{
+      height: 158px !important;
+      width: 160px !important;
+    }
+  </style>
 </head>
 
 <body>
@@ -67,7 +72,7 @@
       <h2>Sadak Swasth Journey Mast</h2>
       <div class="">
         <a href="AuthorityGetStarted.ejs" class="btn-get-started scrollto">Get Started as an Authority</a>
-        <a href="WorkerSideGetStartedAs.ejs" class="btn-get-started scrollto">Get Started as a Working Department</a>
+        <a href="/" class="btn-get-started scrollto">Get Started as a Working Department</a>
        </div>
     </div>
   </section><!-- End Hero -->
@@ -135,7 +140,7 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/problem-categorisation-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/crack1.jpeg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Cracks</h4>
               <p></p>
@@ -143,7 +148,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/problem-categorisation-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/hole1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Potholes</h4>
               <p></p>
@@ -151,7 +156,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/problem-categorisation-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/water1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Water Logging</h4>
               <p></p>
@@ -202,12 +207,12 @@
           <div class="col-lg-2 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/hritik.png" class="img-fluid added" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href="https://twitter.com/HritikKhurana2"><i class="bi bi-twitter"></i></a>
                   <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.instagram.com/hritikkhurana_/"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/hritik-khurana-8b3b32193/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -220,12 +225,12 @@
           <div class="col-lg-2 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/rajat.jpg" class="img-fluid added" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href="https://twitter.com/rajatbansal_dev"><i class="bi bi-twitter"></i></a>
                   <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.instagram.com/rajat._bansal_/"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/rajatbansal01/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -238,12 +243,12 @@
           <div class="col-lg-2 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/amit.jpg" class="img-fluid added" alt="" height="158px">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href="https://twitter.com/amitkumar1058"><i class="bi bi-twitter"></i></a>
                   <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.instagram.com/amitghadwal_"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/amit-kumar-8b6a36161/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -256,12 +261,12 @@
           <div class="col-lg-2 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/ojas.jpg" class="img-fluid added" alt="" height="158px">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href="https://twitter.com/"><i class="bi bi-twitter"></i></a>
                   <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/ojas-khatri/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -274,12 +279,12 @@
           <div class="col-lg-2 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/arushi.jpg" class="img-fluid added" alt="" height="158px">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href="https://twitter.com/ARUSHIJOSHI4"><i class="bi bi-twitter"></i></a>
                   <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.instagram.com/aru.shijoshi"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/arushi-joshi-901314222"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -292,12 +297,12 @@
           <div class="col-lg-2 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/Kashish.jpg" class="img-fluid added" alt="" height="158px">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href="https://twitter.com/Kashish71361685?t=l-NbsoFU8SibVmPvRnRlHQ&s=08"><i class="bi bi-twitter"></i></a>
                   <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.instagram.com/kashishgoyal_428"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/kashish-goyal-69b110201/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
