--- a/views/index.ejs
+++ b/views/index.ejs
@@ -297,7 +297,7 @@
           <div class="col-lg-2 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/Kashish.jpg" class="img-fluid added" alt="" height="158px">
+                <img src="assets/img/team/kashish.jpg" class="img-fluid added" alt="" height="158px">
                 <div class="social">
                   <a href="https://twitter.com/Kashish71361685?t=l-NbsoFU8SibVmPvRnRlHQ&s=08"><i class="bi bi-twitter"></i></a>
                   <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
