added changes in cctv , dashboard

--- a/views/AuthoritySideDashboard.ejs
+++ b/views/AuthoritySideDashboard.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Sarasmarg-DashboardAuthoritySide</title>
+  <title>Sarasmarg-Admin Dashboard</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,7 +48,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto " href="/">Home</a></li>
-          <li><a class="nav-link scrollto " href="./getLocation.ejs">All Complaints</a></li>
+          <!-- <li><a class="nav-link scrollto " href="./getLocation.ejs">All Complaints</a></li> -->
           <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -66,6 +66,18 @@
           <span>Complaints</span>
         </a>
       </li><!-- End Dashboard Nav -->
+      <li class="nav-item">
+        <a class="nav-link " href="AuthoritySideCCTVFeed.ejs">
+          <i class="bi bi-grid"></i>
+          <span>Complaints through CCTV</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="getLocation.ejs">
+          <i class="bi bi-grid"></i>
+          <span>Complaints Locations</span>
+        </a>
+      </li>
 </aside><!-- End Sidebar-->
 
 <main id="main-dashboard" class="main">
