--- a/views/getLocation.ejs
+++ b/views/getLocation.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Complaints Locations</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
   integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
   crossorigin=""/>
@@ -47,10 +47,11 @@
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex align-items-center">
       <div class="container d-flex align-items-center justify-content-between">
-        <a href="index.ejs" class="logo"><img src="assets/img/logo-sarasmarg-2.png" alt=""></a>
+        <a href="/" class="logo"><img src="assets/img/logo-sarasmarg-2.png" alt=""></a>
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link scrollto " href="/">Home</a></li>
+            <li><a class="nav-link scrollto" href="AuthoritySideDashboard.ejs">Dashboard</a></li>
             <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
