--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
       <h2>Sadak Swasth Journey Mast</h2>
       <div class="">
         <a href="AuthorityGetStarted.ejs" class="btn-get-started scrollto">Get Started as an Authority</a>
-        <a href="/" class="btn-get-started scrollto">Get Started as a Working Department</a>
+        <a href="AuthoritySideCCTVDashboard.ejs" class="btn-get-started scrollto">Get Started as a Working Department</a>
        </div>
     </div>
   </section><!-- End Hero -->
