--- a/views/AuthorityGetStartedAs.ejs
+++ b/views/AuthorityGetStartedAs.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Sarasmarg-Authority Side</title>
+  <title>Sarasmarg-Admin</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -44,7 +44,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
-       <a href="index.ejs" class="logo"><img src="assets/img/logo-sarasmarg-2.png" alt=""></a>
+       <a href="/" class="logo"><img src="assets/img/logo-sarasmarg-2.png" alt=""></a>
 
       <nav id="navbar" class="navbar">
         <ul>
