added modiji photo and updated the problems part

--- a/views/AuthoritySideComplaintsLar.ejs
+++ b/views/AuthoritySideComplaintsLar.ejs
@@ -129,7 +129,7 @@
             </div>
 
               <ul>
-                <li><strong>Category</strong>: Cracks</li>
+                <li><strong>Category</strong>: <%= issue.problem %>></li>
                 <li><strong>Cordinates</strong>: <%= issue.coordinates %></li>
                 <li><strong>Date</strong>: <%= issue.date %></li>
                 <li><strong>Time</strong>: <%= issue.time %></li>
