--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,8 +68,10 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
+      <img src="assets/img/modi.png" alt="" class="hero-logo" height="80px" width="80px">
       <h1>Welcome to <a href="/"><img src="assets/img/logo-white.png" alt="" class="hero-logo"></a></h1>
-      <h2>Sadak Swasth Journey Mast</h2>
+      
+      <h2>अब हर मार्ग, सरस-मार्ग</h2>
       <div class="">
         <a href="AuthorityGetStarted.ejs" class="btn-get-started scrollto">Get Started as an Authority</a>
         <a href="#" class="btn-get-started scrollto">Get Started as a Working Department</a>
